--- a/locale/flarum-pusher.yml
+++ b/locale/flarum-pusher.yml
@@ -9,15 +9,15 @@ flarum-pusher:
 
     # These translations are used in the Pusher Settings modal dialog.
     pusher_settings:
-      app_cluster_label: Cluster
-      app_id_label: App ID
-      app_key_label: App Key
-      app_secret_label: App Secret
-      title: Pusher Settings
+      app_cluster_label: クラスタ
+      app_id_label: アプリケID
+      app_key_label: アプリキー
+      app_secret_label: アプリケ秘密
+      title: プッシャーの設定
 
   # Translations in this namespace are used by the admin interface.
   forum:
 
     # These translations are used in the discussion list.
     discussion_list:
-      show_updates_text: "Show {count} updated discussion|Show {count} updated discussions"
+      show_updates_text: "{count}更新されたディスカッション|更新されたディスカッションを表示{count}"
