--- a/locale/flarum-flags.yml
+++ b/locale/flarum-flags.yml
@@ -9,47 +9,47 @@ flarum-flags:
 
     # These translations are used in the Permissions page of the admin interface.
     permissions:
-      flag_posts_label: Flag posts
-      view_flags_label: View flagged posts
+      flag_posts_label: 国旗ポスト
+      view_flags_label: 報告された投稿を表示
 
     # These translations are used in the Flags Settings modal dialog.
     settings:
-      guidelines_url_label: Community Guidelines URL
-      title: Flags Settings
+      guidelines_url_label: コミュニティガイドラインのURL
+      title: フラグの設定
 
   # Translations in this namespace are used by the forum user interface.
   forum:
 
     # These translations are used by the Flag Post modal dialog.
     flag_post:
-      confirmation_message: Thank you for flagging this post. Our moderators will look into it.
+      confirmation_message: この投稿にフラグを付けていただきありがとうございます。 私たちの司会者はそれを調べます。
       dismiss_button: => core.ref.okay
-      reason_inappropriate_label: Inappropriate
-      reason_inappropriate_text: "This post is offensive, abusive, or violates our <a>community guidelines</a>."
+      reason_inappropriate_label: 不適切
+      reason_inappropriate_text: "この投稿は攻撃的、虐待的、または<a>コミュニティのガイドラインに違反しています</a>."
       reason_off_topic_label: "Off-topic"
-      reason_off_topic_text: This post is not relevant to the current discussion and should be moved elsewhere.
-      reason_other_label: Other
-      reason_spam_label: Spam
-      reason_spam_text: This post is an advertisement.
+      reason_off_topic_text: この投稿は現在の議論とは関係がなく、他の場所に移動する必要があります。
+      reason_other_label: その他
+      reason_spam_label: スパム
+      reason_spam_text: この投稿は広告です。
       submit_button: => flarum-flags.ref.flag_post
       title: => flarum-flags.ref.flag_post
 
     # These translations are used by the Flagged Posts dropdown, a.k.a. "the flag".
     flagged_posts:
-      empty_text: No Flags
-      item_text: "{username} in <em>{discussion}</em>"
+      empty_text: フラグなし
+      item_text: "{username} に <em>{discussion}</em>"
       title: => flarum-flags.ref.flagged_posts
       tooltip: => flarum-flags.ref.flagged_posts
 
     # These translations are used by the frame displayed around flagged posts.
     post:
-      dismiss_flag_button: Dismiss Flag
-      flagged_by_text: "{username} flagged"
-      flagged_by_with_reason_text: "{username} flagged as {reason}"
+      dismiss_flag_button: フラグを解除する
+      flagged_by_text: "{username} フラグ"
+      flagged_by_with_reason_text: "{username} としてフラグ {reason}"
 
     # These translations are used by the post control buttons.
     post_controls:
-      flag_button: Flag
+      flag_button: 旗
 
   ##
   # REUSED TRANSLATIONS - These keys should not be used directly in code!
@@ -57,5 +57,5 @@ flarum-flags:
 
   # Translations in this namespace are referenced by two or more unique keys.
   ref:
-    flag_post: Flag Post
-    flagged_posts: Flagged Posts
+    flag_post: 旗ポスト
+    flagged_posts: フラグ付き投稿
