--- a/locale/core.yml
+++ b/locale/core.yml
@@ -1,102 +1,107 @@
 core:
 
   ##
-  # UNIQUE KEYS - The following keys are used in only one location each.
+  # ユニークキー - 以下のキーはそれぞれ1つの場所でのみ使用されます。
   ##
 
-  # Translations in this namespace are used by the admin interface.
+  # この名前空間の翻訳は、管理インターフェースによって使用されます。
   admin:
 
-    # These translations are used in the placeholder Add Extension modal dialog.
+    # これらの翻訳は、プレースホルダの[拡張機能の追加]モーダルダイアログで使用されます。
     add_extension:
-      developer_text: "デベロッパーの方は、<a>ドキュメントを読んで</a>、独自の拡張機能を構築することができます。"
+      developer_text: "開発者は私たちの<a>ドキュメント</a>を読み、独自の拡張機能を構築することができます。"
       install_text: "その間、<a> Flarumコミュニティサイト</a>で拡張機能を探し、Composerを使用して手動でインストールすることができます。"
-      temporary_text: "ある日、フォーラムにエクステンションを簡単に追加することができます。 したがって、私たちは生態系を構築しています！"
+      temporary_text: "ある日、遠くない将来、このダイアログでフォーラムにエクステンションを簡単に追加することができます。話しながら、私たちは生態系を構築しています！"
+      title: 拡張機能を追加する
 
-    # These translations are used in the Appearance page.
+    # これらの翻訳は、[外観]ページで使用されます。
     appearance:
       colored_header_label: 色付きヘッダー
       colors_heading: 色
-      colors_text: "あなたのフォーラムのテーマに2色を選んでください。 最初の1つはハイライトカラーとして使用され、2つ目は背景要素のスタイルに使用されます。"
+      colors_text: "あなたのフォーラムをテーマにする2つの色を選択してください。最初のものはハイライトカラーとして使用され、2番目のものは背景要素のスタイルに使用されます。"
+      custom_footer_heading: カスタムフッター
+      custom_footer_text: => core.ref.custom_footer_text
       custom_header_heading: カスタムヘッダー
-      custom_header_text: "Flarum自身のヘッダーの上に、ページの一番上に表示するHTMLを追加します。"
+      custom_header_text: => core.ref.custom_header_text
       custom_styles_heading: カスタムスタイル
-      custom_styles_text: Flarumのデフォルトスタイルの上に適用される独自のLESS / CSSコードを追加して、フォーラムの外観をカスタマイズします。
+      custom_styles_text: Flarumのデフォルトスタイルの上に適用する独自のLESS / CSSコードを追加して、フォーラムの外観をカスタマイズします。
       dark_mode_label: ダークモード
-      edit_css_button: 編集カスタムCSS
-      edit_header_button: カスタムヘッダーの編集
-      enter_hex_message: 16進数のカラーコードを入力してください。
-      favicon_heading: Favicon
-      favicon_text: フォーラムのショートカットアイコンとして表示される画像をアップロードする.
-      logo_heading: Logo
+      edit_css_button: カスタムCSSの編集
+      edit_footer_button: => core.ref.custom_footer_title
+      edit_header_button: => core.ref.custom_header_title
+      enter_hex_message: １６進数のカラーコードを入力してください。
+      favicon_heading: ファビコン
+      favicon_text: フォーラムのショートカットアイコンとして表示する画像をアップロードします。
+      logo_heading: ロゴ
       logo_text: フォーラムのタイトルの代わりに表示される画像をアップロードします。
       submit_button: => core.ref.save_changes
 
-    # These translations are used in the Basics page.
+    # これらの翻訳は、[基本]ページで使用されます。
     basics:
       all_discussions_label: => core.ref.all_discussions
-      default_language_heading: 既定の言語
-      forum_description_heading: フォーラムの説明
-      forum_description_text: コミュニティを説明する短い文または2つを入力します。これは、メタタグに表示され、検索エンジンに表示します。
-      forum_title_heading: フォーラムのタイトル
-      home_page_heading: ホームページ
-      home_page_text: "ユーザーがフォーラムにアクセスしたときに最初に表示されるページを選択します。カスタム値を入力する場合は、フォーラムルートに対する相対パスを使用します。"
-      saved_message: 変更内容が保存されました。
+      default_language_heading: Default Language
+      forum_description_heading: Forum Description
+      forum_description_text: Enter a short sentence or two that describes your community. This will appear in the meta tag and show up in search engines.
+      forum_title_heading: Forum Title
+      home_page_heading: Home Page
+      home_page_text: Choose the page which users will first see when they visit your forum.
+      saved_message: Your changes were saved.
+      show_language_selector_label: Show language selector
       submit_button: => core.ref.save_changes
-      welcome_banner_heading: ウェルカムバナー
-      welcome_banner_text: [すべてのディスカッション] ページのバナーに表示されるテキストを構成します。あなたのフォーラムにゲストを歓迎するためにこれを使用します。
+      welcome_banner_heading: Welcome Banner
+      welcome_banner_text: Configure the text that displays in the banner on the All Discussions page. Use this to welcome guests to your forum.
 
     # These translations are used in the Dashboard page.
     dashboard:
-      beta_warning_text: "この <strong> ベータソフトウェアの </strong> は、私たちはそれをテストし、それを改善することができます主に提供されています;本番では使ってはいけない」。
-      contributing_text: "バグを探して、貢献したいですか?<a> 寄稿ドキュメント </a> を読んでください。
-      extension_text: "拡張機能の開発に興味がありますか?<a> 拡張ドキュメント </a> を参照してください。
-      features_text: "機能を改善するためのアイデアを得た?<a> の機能タグ </a> の下にそれについてお聞かせください。
-      support_text: "バグを発見?<a> サポートタグ </a> の下で、私たちのフォーラムで、それを報告してください。
-      troubleshooting_text: "問題を抱えて?<a> のトラブルシューティングドキュメント </a> の指示に従ってください。
-      version_text: "Flarum を試してくれてありがとう!バージョン {バージョン} を実行しています。
-      welcome_text: "ようこそ Flarum ベータへ!"
+      clear_cache_button: Clear Cache
+      tools_button: Tools
 
     # These translations are used in the Edit Custom CSS modal dialog.
     edit_css:
-      customize_text: "Flarum の <a> のデフォルトのスタイル </a> の上に適用される独自の以下/CSS コードを追加することによって、フォーラムの外観をカスタマイズします。"
+      customize_text: "Customize your forum's appearance by adding your own LESS/CSS code to be applied on top of Flarum's <a>default styles</a>."
       submit_button: => core.ref.save_changes
-      title: カスタム CSS の編集
+      title: Edit Custom CSS
+
+    # These translations are used in the Edit Custom Footer modal dialog.
+    edit_footer:
+      customize_text: => core.ref.custom_footer_text
+      submit_button: => core.ref.save_changes
+      title: => core.ref.custom_footer_title
 
     # These translations are used in the Edit Group modal dialog.
     edit_group:
-      color_label: カラー
-      delete_button: グループの削除
-      delete_confirmation: "このグループを削除してもよろしいですか?グループメンバーは削除されません。
-      icon_label: アイコン
-      icon_text: "任意の <a> FontAwesome </a> のアイコンクラスの名前を入力し、<em> </em> の fa-<code> の接頭辞をせずに"。
-      name_label: 名前
-      plural_placeholder: 複数 (改造など)
-      singular_placeholder: 特異 (例えば Mod)
-      submit_button: = > core.ref.save_changes
-      title: グループの作成
+      color_label: => core.ref.color
+      delete_button: Delete Group
+      delete_confirmation: "Are you sure you want to delete this group? The group members will NOT be deleted."
+      icon_label: Icon
+      icon_text: "Enter the name of any <a>FontAwesome</a> icon class, <em>including</em> the <code>fas fa-</code> prefix."
+      name_label: Name
+      plural_placeholder: Plural (e.g. Mods)
+      singular_placeholder: Singular (e.g. Mod)
+      submit_button: => core.ref.save_changes
+      title: Create Group
 
     # These translations are used in the Edit Custom Header modal dialog.
     edit_header:
-      customize_text: "Add HTML to be displayed at the very top of the page, above Flarum's own header."
+      customize_text: => core.ref.custom_header_text
       submit_button: => core.ref.save_changes
-      title: Edit Custom Header
+      title: => core.ref.custom_header_title
 
     # These translations are used in the email page of the admin interface.
     email:
-      account_heading: SMTPアカウント
-      addresses_heading: アドレス
-      driver_label: ドライバ
-      encryption_label: 暗号化
-      from_label: 送信者
-       heading: => core.ref.email
-       host_label: ホスト
-       password_label: => core.ref.password
-       port_label: ポート
-       server_heading: SMTPサーバー
-       submit_button: => core.ref.save_changes
-       title: フォーラムが電子メールの送信に使用するSMTP設定とアドレスを設定します。
-       username_label: => core.ref.username
+      account_heading: SMTP Account
+      addresses_heading: Addresses
+      driver_label: Driver
+      encryption_label: Encryption
+      from_label: Sender
+      heading: => core.ref.email
+      host_label: Host
+      password_label: => core.ref.password
+      port_label: Port
+      server_heading: SMTP Server
+      submit_button: => core.ref.save_changes
+      text: Configure the SMTP settings and addresses your forum will use to send email.
+      username_label: => core.ref.username
 
     # These translations are used in the Extensions page.
     extensions:
@@ -129,13 +134,14 @@ core:
 
     # These translations are used in the Permissions page of the admin interface.
     permissions:
-      allow_renaming_label: Allow renaming
       allow_post_editing_label: Allow post editing
+      allow_renaming_label: Allow renaming
       create_heading: Create
       delete_discussions_forever_label: Delete discussions forever
       delete_discussions_label: Delete discussions
       delete_posts_forever_label: Delete posts forever
-      edit_and_delete_posts_label: Edit and delete posts
+      delete_posts_label: Delete posts
+      edit_posts_label: Edit posts
       global_heading: Global
       moderate_heading: Moderate
       new_group_button: New Group
@@ -146,7 +152,9 @@ core:
       sign_up_label: Sign up
       start_discussions_label: Start discussions
       view_discussions_label: View discussions
+      view_last_seen_at_label: View user last seen time
       view_post_ips_label: View post IP addresses
+      view_user_list_label: View user list
 
     # These translations are used in the dropdown menus on the Permissions page.
     permissions_controls:
@@ -165,7 +173,7 @@ core:
 
     # These translations are used in image upload buttons.
     upload_image:
-      remove_button: Remove
+      remove_button: => core.ref.remove
       upload_button: Choose an Image...
 
   # Translations in this namespace are used by the forum user interface.
@@ -173,8 +181,8 @@ core:
 
     # These translations are used in the Change Email modal dialog.
     change_email:
-      confirmation_message: => core.ref.confirmation_email_sent
       confirm_password_placeholder: => core.ref.confirm_password
+      confirmation_message: => core.ref.confirmation_email_sent
       dismiss_button: => core.ref.okay
       incorrect_password_message: The password you entered is incorrect.
       submit_button: => core.ref.save_changes
@@ -192,6 +200,7 @@ core:
       exit_full_screen_tooltip: Exit Full Screen
       full_screen_tooltip: Full Screen
       minimize_tooltip: Minimize
+      preview_tooltip: Preview
 
     # These translations are used by the composer when starting a discussion.
     composer_discussion:
@@ -223,8 +232,7 @@ core:
       delete_confirmation: "Are you sure you want to delete this discussion?"
       delete_forever_button: => core.ref.delete_forever
       log_in_to_reply_button: Log In to Reply
-      rename_button: Rename
-      rename_text: "Enter a new title for this discussion:"
+      rename_button: => core.ref.rename
       reply_button: => core.ref.reply
       restore_button: => core.ref.restore
 
@@ -238,10 +246,16 @@ core:
 
     # These translations are used in the Edit User modal dialog (admin function).
     edit_user:
+      activate_button: Activate User
+      email_heading: => core.ref.email
       email_label: => core.ref.email
+      groups_heading: Groups
+      password_heading: => core.ref.password
       password_label: => core.ref.password
+      set_password_label: Set new password
       submit_button: => core.ref.save_changes
       title: Edit User
+      username_heading: => core.ref.username
       username_label: => core.ref.username
 
     # These translations are used in the Forgot Password modal dialog.
@@ -257,6 +271,7 @@ core:
     # These translations are used in the header and session dropdown menu.
     header:
       admin_button: Administration
+      back_to_index_tooltip: Back to Discussion List
       log_in_link: => core.ref.log_in
       log_out_button: => core.ref.log_out
       profile_button: Profile
@@ -286,6 +301,7 @@ core:
       forgot_password_link: "Forgot password?"
       invalid_login_message: Your login details were incorrect.
       password_placeholder: => core.ref.password
+      remember_me_label: Remember Me
       sign_up_text: "Don't have an account? <a>Sign Up</a>"
       submit_button: => core.ref.log_in
       title: => core.ref.log_in
@@ -327,11 +343,16 @@ core:
       reply_placeholder: => core.ref.write_a_reply
       time_lapsed_text: "{period} later"
 
+    # These translations are used by the rename discussion modal.
+    rename_discussion:
+      submit_button: => core.ref.rename
+      title: Rename Discussion
+
     # These translations are used by the search results dropdown list.
     search:
       all_discussions_button: 'Search all discussions for "{query}"'
       discussions_heading: => core.ref.discussions
-      users_heading: Users
+      users_heading: => core.ref.users
 
     # These translations are used in the Settings page.
     settings:
@@ -348,8 +369,8 @@ core:
 
     # These translations are used in the Sign Up modal dialog.
     sign_up:
-      email_placeholder: => core.ref.email
       dismiss_button: => core.ref.okay
+      email_placeholder: => core.ref.email
       log_in_text: "Already have an account? <a>Log In</a>"
       password_placeholder: => core.ref.password
       submit_button: => core.ref.sign_up
@@ -359,16 +380,16 @@ core:
 
     # These translations are used in the user profile page and profile popup.
     user:
-      avatar_remove_button: Remove
+      avatar_remove_button: => core.ref.remove
       avatar_upload_button: Upload
       avatar_upload_tooltip: Upload a new avatar
-      bio_placeholder: Write something about yourself
       discussions_link: => core.ref.discussions
       in_discussion_text: "In {discussion}"
       joined_date_text: "Joined {ago}"
       online_text: Online
+      posts_empty_text: It looks like there are no posts here.
+      posts_link: => core.ref.posts
       posts_load_more_button: => core.ref.load_more
-      posts_link: Posts
       settings_link: => core.ref.settings
 
     # These translations are found on the user profile page (admin function).
@@ -391,10 +412,6 @@ core:
     badge:
       hidden_tooltip: Hidden
 
-    # These translations are used to modify usernames.
-    username:
-      deleted_text: "[deleted]"
-
     # These translations are displayed as error messages.
     error:
       generic_message: "Oops! Something went wrong. Please reload the page and try again."
@@ -413,31 +430,54 @@ core:
       three_text: "{first}, {second}, and {third}"
       two_text: "{first} and {second}"
 
+    # These translations are used to modify usernames.
+    username:
+      deleted_text: "[deleted]"
+
   # Translations in this namespace are used in views other than Flarum's normal JS client.
   views:
 
     # Translations in this namespace are displayed by the basic HTML content loader.
     content:
       javascript_disabled_message: This site is best viewed in a modern browser with JavaScript enabled.
-      load_error_message: Something went wrong while trying to load the full version of this site.
+      load_error_message: Something went wrong while trying to load the full version of this site. Try hard-refreshing this page to fix the error.
       loading_text: Loading...
 
     # Translations in this namespace are displayed in the basic HTML discussion view.
     discussion:
       next_page_button: => core.ref.next_page
-      previous_page_button: Previous Page
+      previous_page_button: => core.ref.previous_page
+
+    # Translations in this namespace are displayed when Flarum encounters an error.
+    error:
+      403_message: You do not have permission to access this page.
+      404_message: The page you requested could not be found.
+      404_return_link: "Return to {forum}"
+      500_message: An error occurred while trying to load this page.
+      503_message: "{forum} is undergoing maintenance. Thanks for your patience!"
 
     # Translations in this namespace are displayed by the basic HTML discussion index.
     index:
       all_discussions_heading: => core.ref.all_discussions
       next_page_button: => core.ref.next_page
+      previous_page_button: => core.ref.previous_page
+
+    # Translations in this namespace are displayed by the Log Out confirmation interface.
+    log_out:
+      log_out_button: => core.ref.log_out
+      log_out_confirmation: "Are you sure you want to log out of {forum}?"
+      title: => core.ref.log_out
 
     # Translations in this namespace are displayed by the Reset Password interface.
-    reset:
-      confirm_password_label: => core.ref.confirm_password
-      password_label: => core.ref.password
-      submit_button: Reset Password
+    reset_password:
+      confirm_password_label: Confirm New Password
+      new_password_label: New Password
+      submit_button: => core.ref.save_changes
       title: => core.ref.reset_your_password
+
+  # Translations in this namespace are used in messages output by the API.
+  api:
+    invalid_username_message: "The username may only contain letters, numbers, and dashes."
 
   # Translations in this namespace are used in emails sent by the forum.
   email:
@@ -490,11 +530,16 @@ core:
     all_discussions: All Discussions
     change_email: Change Email
     change_password: Change Password
+    color: Color                                 # Referenced by flarum-tags.yml
     confirm_password: Confirm Password
     confirmation_email_sent: "We've sent a confirmation email to {email}. If it doesn't arrive soon, check your spam folder."
+    custom_footer_text: Add HTML to be displayed at the very bottom of the page.
+    custom_footer_title: Edit Custom Footer
+    custom_header_text: "Add HTML to be displayed at the very top of the page, above Flarum's own header."
+    custom_header_title: Edit Custom Header
     delete: Delete
     delete_forever: Delete Forever
-    discussions: Discussions
+    discussions: Discussions                     # Referenced by flarum-statistics.yml
     edit: Edit
     email: Email
     load_more: Load More
@@ -505,6 +550,10 @@ core:
     notifications: Notifications
     okay: OK                                     # Referenced by flarum-tags.yml
     password: Password
+    posts: Posts                                 # Referenced by flarum-statistics.yml
+    previous_page: Previous Page
+    remove: Remove
+    rename: Rename
     reply: Reply                                 # Referenced by flarum-mentions.yml
     reset_your_password: Reset Your Password
     restore: Restore
@@ -514,6 +563,7 @@ core:
     some_others: "{count} other|{count} others"  # Referenced by flarum-likes.yml, flarum-mentions.yml
     start_a_discussion: Start a Discussion
     username: Username
+    users: Users                                 # Referenced by flarum-statistics.yml
     write_a_reply: Write a Reply...
     you: You                                     # Referenced by flarum-likes.yml, flarum-mentions.yml
 
